Responsiveness updates to styles for contact.html. Fixed issue with form spilling from container.

--- a/styles.css
+++ b/styles.css
@@ -80,22 +80,17 @@ textarea{
     width: 80vw;
     height: 70vh;
     margin-top: 5vh;
-    padding-top: 2em;
+    padding: 5%;
     border-radius: 10%;
     text-align: center;
 }
 
 .form1 {
     background-color: white;
-    margin-top: 1em;
-    margin-right: 3em;
-    margin-left: 3.25em;
-    padding-top: 3em;
-    padding-bottom: 6em;
     overflow: hidden;
     border-radius: 10%;
-    max-width: 72vw;
-    max-height: 63vh;
+    width: 100%;
+    height: 100%;
 
 }
 
